--- a/style.css
+++ b/style.css
@@ -29,8 +29,6 @@ h1 {
 }
  
 .about {
-    color: #000000;
-    text-decoration: none;
     font-weight: bold;
     padding-left: 20px;
     padding-right: 20px;
@@ -38,9 +36,18 @@ h1 {
     padding-bottom: 10px;
     text-align: center;
     position: absolute;
-    top: 175px;
+    text-decoration: none;
+    coler: #000000;
+    top: 110px;
     left: 375px;
     letter-spacing: 4px;
+} 
+.about:hover {
+  background: #ffa500;
+  text-decoration: none;
+}
+.about:visited {
+  color: #000000;
 }
  
 .activity {
@@ -56,15 +63,7 @@ h1 {
     top: 175px;
     left: 575px;
     letter-spacing: 4px;
-}
-.activity:hover {
-  background: #ffa500;
-  text-decoration: none;
-}
-.activity:visited {
-  color: #000000;
-}
- 
+
 .contact {
     color: #000000;
     text-decoration: none;
