--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ h1 {
     top: 175px;
     left: 175px;
     letter-spacing: 4px;
-  
 }
 .home:hover {
   background: #ffa500;
@@ -30,6 +29,8 @@ h1 {
 }
  
 .about {
+    color: #000000;
+    text-decoration: none;
     font-weight: bold;
     padding-left: 20px;
     padding-right: 20px;
@@ -37,13 +38,10 @@ h1 {
     padding-bottom: 10px;
     text-align: center;
     position: absolute;
-    text-decoration: none;
-    coler: #000000;
-    top: 110px;
+    top: 175px;
     left: 375px;
     letter-spacing: 4px;
-  
-} 
+}
 .about:hover {
   background: #ffa500;
   text-decoration: none;
@@ -65,6 +63,7 @@ h1 {
     top: 175px;
     left: 575px;
     letter-spacing: 4px;
+}
 
 .contact {
     color: #000000;
@@ -80,14 +79,14 @@ h1 {
     left: 775px;
     letter-spacing: 4px;
 }
-  
-.contact:hover {
+.activity:hover {
   background: #ffa500;
   text-decoration: none;
 }
-.contact:visited {
+.activity:visited {
   color: #000000;
 }
+ 
 
 .sentence {
     width: 100%;
